# PSRP_D3PO

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
configs/: config.yaml
configs/algo/: d3po.yaml  ppo.yaml  ppo_lagrangian.yaml
configs/experiment/: benchmark.yaml  default.yaml  full.yaml  smoke.yaml
configs/policy/: default.yaml
mppsrp_nir/: .gitignore  README.md  export_cpsat_bundle.py  export_graph_generator_weight_matrix.py  requirements.txt
mppsrp_nir/src/classes/: paths_config.py  utils.py
mppsrp_nir/src/classes/data_generators/: DataBuilder_MPPSRP_Boyers.py  DataBuilder_MPPSRP_Simple.py  GraphGenerator.py
mppsrp_nir/src/scripts/mppsrp/: 1_solve_MPPSRP_Boers.py  (+1 more)
notebooks/: 00_quickstart.ipynb  01_cpsat_comparison.ipynb  01_mtppo_irp_vmi.ipynb
scripts/: evaluate.py  generate_instances.py  train.py  train_mtppo.py
src/: __init__.py
src/algo/: __init__.py  base.py  d3po.py  ppo.py  ppo_lagrangian.py  rollout.py
src/benchmarks/: __init__.py  cpsat.py
src/policy/: __init__.py  decoder.py  encoder.py  heads.py  policy.py
src/psrp_mtppo/: __init__.py  baselines.py  config.py  env.py  experiments.py  ga.py  instances.py  utils.py
src/psrp_mtppo/models/: __init__.py  actors.py  attention.py  critic.py  gin.py  mtppo.py
src/psrp_mtppo/rl/: __init__.py  trainer.py
src/train/: __init__.py  evaluator.py  notebook.py  trainer.py
src/utils/: __init__.py  logging.py  masks_utils.py  normalization.py
tests/: test_algo.py  test_benchmarks.py  test_env.py  test_models.py  test_policy.py  test_trainer.py
(+22 files in other folders)
