[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psrp-mtppo"
version = "0.1.0"
description = "From-scratch MTPPO implementation for IRP-VMI experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "gymnasium>=0.29",
  "torch>=2.3",
  "matplotlib>=3.8",
  "pandas>=2.2",
  "ortools>=9.8",
  "nbformat>=5.10",
]

[tool.setuptools.packages.find]
where = ["src"]
